--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,28 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+
+# ========== CUSTOM IGNORE ==========
+
+# Ignore all text files
+*.txt
+
+# Ignore all csv files
+#*.csv
+
+# Ignore all json files
+#*.json
+
+# Ignore files related to API keys
+.env
+
+# Ignore exe
+#.exe
+
+# Ignore Folders
+BlazorServerNoteApp-MarketNotes/
+BlazorServerNotes/
+BlazorServerNotes_DEL/
+
+
